--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   # Backend Spring Boot Service
   - type: web
     name: ims-backend
+    runtime: java
     plan: free
     buildCommand: cd backend && ./mvnw clean package -DskipTests
     startCommand: cd backend && java -jar target/ims-0.0.1-SNAPSHOT.jar
