--- a/render.yaml
+++ b/render.yaml
@@ -27,8 +27,9 @@ services:
         value: Agnel@70050
 
   # Frontend React Service
-  - type: static
+  - type: web
     name: ims-frontend
+    env: static
     plan: free
     buildCommand: cd frontend && npm install && npm run build
     staticPublishPath: frontend/dist
