--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -24,7 +24,7 @@ server.port=${PORT:8080}
 server.servlet.context-path=/api
 
 # CORS Configuration
-spring.web.cors.allowed-origins=https://ims-frontend.onrender.com,http://localhost:3000
+spring.web.cors.allowed-origins=https://ims-frontend-tzrz.onrender.com,http://localhost:3000
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
@@ -37,4 +37,4 @@ logging.level.org.springframework.security=INFO
 # Performance
 spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.order_updates=true 
+spring.jpa.properties.hibernate.order_updates=true
