--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -27,12 +27,14 @@ server.servlet.context-path=/api
 spring.web.cors.allowed-origins=https://ims-frontend-tzrz.onrender.com
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
+spring.web.cors.exposed-headers=Authorization
 spring.web.cors.allow-credentials=true
 
 # Logging
 logging.level.root=INFO
-logging.level.com.example.ims=INFO
-logging.level.org.springframework.security=INFO
+logging.level.com.example.ims=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web.cors=DEBUG
 
 # Performance
 spring.jpa.properties.hibernate.jdbc.batch_size=20
